--- a/public/consulta.html
+++ b/public/consulta.html
@@ -104,13 +104,13 @@
                 </svg>
             </span>
             <!-- Campo de entrada de texto para pesquisa -->
-            <input type="text" class="search-box" placeholder="Digite o nome ou CGM do estudante..." id="searchInput">
+            <input type="text" class="search-box" placeholder="Digite o nome ou CGM do estudante..." id="aluno-matricula">
             <!-- Botão para limpar o campo de pesquisa -->
             <button class="clear-search" id="clearSearch">✕</button>
         </div>
          
         <!-- Container dos filtros dropdown -->
-        <div class="filters-container">
+        <!-- <div class="filters-container">
             <div class="filter-dropdown">
                 <select class="filter-select" id="encaminhamentoFilter">
                     <option value="">Todos os Encaminhamentos</option>
@@ -159,7 +159,7 @@
             <button class="clear-filters" id="clearFilters">
                 Limpar Filtros
             </button>
-        </div>
+        </div> -->
 
         <!-- Informações do Estudante (exemplo estático) -->
         <div class="student-info" id="studentInfo">
@@ -181,7 +181,6 @@
         </tbody>
     </table>
     
-            <p>🔍 Digite o nome ou CGM do estudante na barra de pesquisa acima ou use os filtros para visualizar informações</p>
         </div>
   
     </main>
